--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 <body bgcolor = "#EFF1F3" text = "#223843">
 
 <div class="topnav">
-  <a class="active" href="home.html">About Me</a>
+  <a class="active" href="index.html">About Me</a>
   <a href="tutorials.html">Tutorials</a>
   <a href="projects.html">Projects</a>
 </div>
