--- a/tutorials.html
+++ b/tutorials.html
@@ -40,7 +40,7 @@ body {
 <body bgcolor = "#EFF1F3" text = "#223843">
 
 <div class="topnav">
-  <a href="home.html">About Me</a>
+  <a href="index.html">About Me</a>
   <a class = "active" href="tutorials.html">Tutorials</a>
   <a href="projects.html">Projects</a>
 </div>
